Resolve many inspection warnings.